# StringChecker

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: msvc.yml
src/: CMakeLists.txt  main.c
